tests/typechecker/pass/403-immutable-struct-fields.hyg
let x = struct { a = 0 };
x.a <- 1;
assert(x.a = 1)
