tests/typechecker/fail/402-immutable-struct-fields.hyg
let x = struct { immutable a = 0 };
x.a <- 1 // fails due to assign to immutable field
